--- a/public/css/style.css
+++ b/public/css/style.css
@@ -322,3 +322,11 @@ button.next:hover {
     width: 100%;
   }
 }
+.errorBlock {
+  border: 2px solid #ff4500;
+  padding: 5px;
+  font-size: 10pt;
+  border-radius: 8px;
+  visibility: hidden;
+  margin-top: 4px;
+}
